feat: implementado a funcionalidade de copiar n° de whattsApp

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                 <a href="https://www.linkedin.com/in/keren-apuque-cardoso-b02345252/"><button><i class="bi bi-linkedin"></i></button></a> 
                 <a href="https://github.com/KeReN995221"><button><i class="bi bi-github"></i></button></a> 
                 <a href=mailto:cardosokerenapuque@gmail.com><button><i class="bi bi-envelope-at-fill"></i></button></a> 
+                <button id="bi-whatsapp"><i class="bi bi-whatsapp"></i></button>
            </div><!--interface-->
         </footer>
         <script src="js/index.js"></script>
