feat: implementado a visualização dos repositorios por meio da api

--- a/index.html
+++ b/index.html
@@ -119,22 +119,14 @@
                     <div class="interface">
                         <h2>PROJETOS DESENVOLVIDOS</h2>
                         <div class="flex">
-                            <div class="img-proj" style="background-image: url(img/identidade_visual.svg);">
-                                <div class="overlay"><h3>Identidade Visual</h3></div>
-                            </div><!--"img-proj"-->
-                            <div class="img-proj" style="background-image: url(img/identidade_visual.svg);">
-                                <div class="overlay"><h3>Jogo 2d</h3></div>
-                            </div><!--"img-proj"-->
-                            <div class="img-proj" style="background-image: url(img/identidade_visual.svg);">
-                                <div class="overlay"><h3>Projetos Futuros</h3></div>
-                            </div><!--"img-proj"-->
+                                <button id="consultarRepositorios" onclick="consultarRepositorios()">visualizar</button>
+                                <span id="status"></span>
+                                <div id="repos">
+                                    <ul id="listaRepositorios"></ul><!--tag para listagem-->
+                                </div>    
                         </div><!--flex--> 
                     </div><!--interface-->
             </section> <!--projetos-->  
-
-    
- 
-
         </main>
         
         <footer>
