fix: realizada correções no style do mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="css/estilo.css">
         <title>Keren | home</title>
     </head>
-    <body>
+    <body class="dark">
         <header>
             <div class="interface">
                
@@ -76,21 +76,21 @@
                 <div class="interface">
                     <h2>MINHAS ESPECIALIDADES</h2>
                     <div class="flex">
-                        <article class="box">
-                           <i class="bi bi-filetype-java"></i>
-                           <h3>Java</h3>
-                           <p><br>Spring Boot e Spring Cloud juntamente com OOP</p>
-                        </article><!--especialidades-box-->
-                        <article class="box">
-                           <i class="bi bi-palette"></i>
-                           <h3>Design</h3>
-                           <p><br>Figma e canva é um ótimo alinhado do design e prototipação</p>
-                        </article><!--especialidades-box-->
-                        <article class="box">
-                           <i class="bi bi-filetype-sql"></i>
-                           <h3>Banco de dados</h3>
-                           <p><br>MySQL, PostgreeSQL, MongoDb e Aurora</p>
-                        </article><!--especialidades-box-->
+                        <div class="box">
+                            <i class="bi bi-palette"></i>
+                            <h3>Design</h3>
+                            <p><br>Figma e canva é um ótimo alinhado do design e prototipação</p>
+                         </div><!--especialidades-box-->
+                        <div class="box">
+                           <i class="bi bi-laptop"></i>
+                           <h3>Linguagens</h3>
+                           <p><br> html, css, JavaScript, react e spring</p>
+                        </div><!--especialidades-box-->
+                        <div class="box">
+                            <i class="bi bi-amazon"></i>
+                           <h3>AWS CLF-C02</h3>
+                           <p><br>certificação de cloud praticioner</p>
+                        </div><!--especialidades-box-->
                     </div><!--flex-->
                 </div><!--interface-->
             </section><!--especialidades-->
