fix: correção do link do buttob contato

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </nav>
                  
                 <div class="contato" >
-                    <a href="link dos ícones de contados"><button>Contatos</button></a>
+                    <a href="#contatos"><button>Contatos</button></a>
                 </div>
                 <div class="darkmode" >
                     <input type="checkbox" name="change-theme" id="change-theme" />
@@ -109,7 +109,7 @@
             </section> <!--projetos-->  
         </main>
         
-        <footer>
+        <footer id="contatos">
            <div class="interface">
                 <a href="https://www.linkedin.com/in/keren-apuque-cardoso-b02345252/"><button><i class="bi bi-linkedin"></i></button></a> 
                 <a href="https://github.com/KeReN995221"><button><i class="bi bi-github"></i></button></a> 
